Image transitions, WIP

--- a/carousel/carousel.html
+++ b/carousel/carousel.html
@@ -9,10 +9,12 @@
 
 <body>
   <div class="carousels">
-    <div class="items"><img src="./img/001.jpeg"></div>
-    <div class="items"><img src="./img/002.jpeg"></div>
-    <div class="items"><img src="./img/003.jpeg"></div>
-    <div class="items"><img src="./img/004.jpeg"></div>
+    <div class="items">
+      <img src="./img/001.jpeg">
+      <img src="./img/002.jpeg">
+      <img src="./img/003.jpeg">
+      <img src="./img/004.jpeg">
+    </div>
     <a class="slide-right" href="#">Previous</a>
     <a class="slide-left" href="#">Next</a>
   </div>
