some of thumbnails js- css

--- a/thumbnail/thumbnail.html
+++ b/thumbnail/thumbnail.html
@@ -16,5 +16,14 @@
       <img src="./images/004.jpeg">
     </div>
   </div>
+  
+  <script>
+  $(function () {
+    $('.thumbnails').thumbnails();
+  })  
+  </script>
+  
+  
+  
 </body>
 </html>
